--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇸🇬 新加坡-1.09MB/s(Youtube:不良林), server: 165.232.169.142, port: 29332, type: ss, cipher: aes-256-cfb, password: 1e5111699c45496da84112f35db665c4}
-  - {name: 🇨🇳 中国-1.00MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-760.0KB/s(Youtube:不良林), server: 14.152.92.74, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-10.65MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
-  - {name: 匈牙利-835.2KB/s(Youtube:不良林), server: 185.225.69.134, port: 45081, type: vmess, uuid: 3c3bfd75-dc30-4e76-8940-47e1137e21f9, alterId: 64, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-4.93MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-889.1KB/s(Youtube:不良林), server: 42.157.195.240, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-556.7KB/s(Youtube:不良林), server: 42.157.195.244, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.77, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.02MB/s(Youtube:不良林), server: 14.152.92.78, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-959.9KB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-901.9KB/s(Youtube:不良林), server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: 42.157.195.230, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-553.9KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-388.5KB/s(Youtube:不良林), server: 51.81.223.10, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-458.2KB/s(Youtube:不良林), server: 42.157.195.233, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: 42.157.195.232, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-5.75MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 匈牙利-835.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-889.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 匈牙利-835.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-889.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 匈牙利-835.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-889.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 匈牙利-835.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-889.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 匈牙利-835.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-889.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 匈牙利-835.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-889.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇸🇬 新加坡-1.09MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.00MB/s(Youtube:不良林)
-      - 🇨🇳 中国-760.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
-      - 匈牙利-835.2KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
-      - 🇨🇳 中国-889.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-556.7KB/s(Youtube:不良林)
+      - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
+      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.02MB/s(Youtube:不良林)
+      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
+      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
+      - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
