--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -6,15 +6,15 @@ log-level: info
 external-controller: :9090
 proxies:
   - {name: 🇨🇳 中国-3.02MB/s(Youtube:不良林), server: hn.zfnode.org, port: 30217, type: trojan, password: 63ec756d-1f6a-36c8-a9fd-025f4acfc74f, sni: hn.zfnode.org, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-959.9KB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-901.9KB/s(Youtube:不良林), server: 42.157.195.243, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.03MB/s(Youtube:不良林), server: 42.157.195.230, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-553.9KB/s(Youtube:不良林), server: 51.81.223.29, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-388.5KB/s(Youtube:不良林), server: 51.81.223.10, port: 443, type: vmess, uuid: c0156451-4efb-45e2-84fc-8d315c4650db, alterId: 32, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.70, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-795.8KB/s(Youtube:不良林), server: 42.157.195.228, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-5.45MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-10.65MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇨🇳 中国-458.2KB/s(Youtube:不良林), server: 42.157.195.233, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇨🇳 中国-1.07MB/s(Youtube:不良林), server: 42.157.195.232, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
   - {name: 🇺🇸 美国-5.75MB/s(Youtube:不良林), server: bai-piao-wang-zhe10.98848.xyz, port: 48240, type: trojan, password: 685022af-2086-454c-8725-8ff6b6ab1d13, sni: bai-piao-wang-zhe10.98848.xyz, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-9.38MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
@@ -22,30 +22,30 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
@@ -53,15 +53,15 @@ proxy-groups:
       - ♻️ 自动选择
       - 🎯 全球直连
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -73,30 +73,30 @@ proxy-groups:
       - 🎯 全球直连
       - 🔰 节点选择
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
@@ -104,15 +104,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,15 +129,15 @@ proxy-groups:
       - 🎯 全球直连
       - ♻️ 自动选择
       - 🇨🇳 中国-3.02MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-901.9KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.03MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇺🇸 美国-553.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-388.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-795.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-5.45MB/s(Youtube:不良林)
+      - 🇺🇸 美国-10.65MB/s(Youtube:不良林)
       - 🇨🇳 中国-458.2KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.07MB/s(Youtube:不良林)
       - 🇺🇸 美国-5.75MB/s(Youtube:不良林)
+      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
