--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 14.152.92.73, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-1.05MB/s(Youtube:不良林), server: 14.152.92.72, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-959.9KB/s(Youtube:不良林), server: 14.152.92.71, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇺🇸 美国-4.93MB/s(Youtube:不良林), server: fhcamd1.gaox.ml, port: 443, type: trojan, password: e23f408a-012e-4030-8b31-02022031cb50, sni: fhcamd1.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 14.152.92.76, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇯🇵 日本-9.38MB/s(Youtube:不良林), server: jgwdj3.gaox.ml, port: 443, type: trojan, password: da777aae-defb-41d0-a183-2c27da2b4677, sni: jgwdj3.gaox.ml, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.29MB/s(Youtube:不良林), server: 180.163.62.91, port: 10064, type: ss, cipher: aes-128-cfb, password: QazEdcTgb159@$*}
-  - {name: 🇩🇪 德国-1.07MB/s(Youtube:不良林), server: 165.22.73.126, port: 23335, type: ss, cipher: aes-256-cfb, password: 7d99ae502227454ea998d71e4b62a388}
-  - {name: 🇺🇸 美国-1.75MB/s(Youtube:不良林), server: sg.guiqing.ml, port: 43956, type: vmess, uuid: 91df6837-896d-45bc-ec6f-0fe4b792b369, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-5.50MB/s(Youtube:不良林), server: 150.230.43.106, port: 54829, type: vmess, uuid: f2b5c3ff-86c7-4efa-831f-ff0fcd7656a5, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-643.1KB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇨🇳 中国-192.8KB/s(Youtube:不良林), server: data-hk-v2.shwjfkw.cn, port: 50205, type: vmess, uuid: b1478e24-4916-3abe-8f17-15931012ecbe, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: data-hk-v2.shwjfkw.cn}}
+  - {name: 🇫🇷 法国-318.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
+  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.234, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇸🇬 新加坡-525.0KB/s(Youtube:不良林), server: 194.124.35.42, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-343.7KB/s(Youtube:不良林), server: 194.124.35.40, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-751.7KB/s(Youtube:不良林), server: 81.90.189.18, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-677.7KB/s(Youtube:不良林), server: 81.90.189.18, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇸🇬 新加坡-358.3KB/s(Youtube:不良林), server: 194.124.35.48, port: 808, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇩🇪 德国-1.15MB/s(Youtube:不良林), server: 161.35.69.20, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: Ultr@r00t_2017}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-358.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-358.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-358.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-358.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-358.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-358.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.05MB/s(Youtube:不良林)
-      - 🇨🇳 中国-959.9KB/s(Youtube:不良林)
-      - 🇺🇸 美国-4.93MB/s(Youtube:不良林)
+      - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
+      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
+      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-9.38MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.29MB/s(Youtube:不良林)
-      - 🇩🇪 德国-1.07MB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.75MB/s(Youtube:不良林)
-      - 🇺🇸 美国-5.50MB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
+      - 🇸🇬 新加坡-358.3KB/s(Youtube:不良林)
+      - 🇩🇪 德国-1.15MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
