--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇸🇬 新加坡-542.4KB/s(Youtube:不良林), server: 194.124.35.42, port: 807, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇨🇳 中国-643.1KB/s(Youtube:不良林), server: 42.157.195.237, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇨🇳 中国-192.8KB/s(Youtube:不良林), server: data-hk-v2.shwjfkw.cn, port: 50205, type: vmess, uuid: b1478e24-4916-3abe-8f17-15931012ecbe, alterId: 1, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: data-hk-v2.shwjfkw.cn}}
-  - {name: 🇫🇷 法国-318.8KB/s(Youtube:不良林), server: 54.37.192.112, port: 443, type: vmess, uuid: 9f58234c-355b-4065-ae21-d4a63099aba5, alterId: 64, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /path/120208301422, ws-headers: {Host: 54.37.192.112}}
-  - {name: 🇨🇳 中国-1.14MB/s(Youtube:不良林), server: 42.157.195.234, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
-  - {name: 🇸🇬 新加坡-525.0KB/s(Youtube:不良林), server: 194.124.35.42, port: 806, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 未知国家-4.62MB/s(Youtube:不良林), server: v47.v2dns.bar, port: 2052, type: vmess, uuid: 0c68af8a-961a-3065-a3a7-1800ebc70bdb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /v47-unlimitndxd, ws-headers: {Host: v47.v2dns.bar}}
+  - {name: 🇨🇳 中国-1.13MB/s(Youtube:不良林), server: 42.157.195.228, port: 12127, type: ssr, cipher: aes-256-cfb, password: 68xdgu9eyif, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 600777:154T8b, obfs-param: 0f099600777.v23f7nM0}
+  - {name: 🇺🇸 美国-867.6KB/s(Youtube:不良林), server: 104.166.135.10, port: 443, type: vmess, uuid: aba50dd4-5484-3b05-b14a-4661caf862d5, alterId: 4, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /ws, ws-headers: {Host: 104.166.135.10}}
   - {name: 🇸🇬 新加坡-343.7KB/s(Youtube:不良林), server: 194.124.35.40, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-751.7KB/s(Youtube:不良林), server: 81.90.189.18, port: 809, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
   - {name: 🇸🇬 新加坡-677.7KB/s(Youtube:不良林), server: 81.90.189.18, port: 812, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-542.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 未知国家-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇸🇬 新加坡-542.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 未知国家-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-542.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 未知国家-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇸🇬 新加坡-542.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 未知国家-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇸🇬 新加坡-542.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 未知国家-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-542.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 未知国家-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇸🇬 新加坡-542.4KB/s(Youtube:不良林)
       - 🇨🇳 中国-643.1KB/s(Youtube:不良林)
-      - 🇨🇳 中国-192.8KB/s(Youtube:不良林)
-      - 🇫🇷 法国-318.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.14MB/s(Youtube:不良林)
-      - 🇸🇬 新加坡-525.0KB/s(Youtube:不良林)
+      - 未知国家-4.62MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.13MB/s(Youtube:不良林)
+      - 🇺🇸 美国-867.6KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-343.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-751.7KB/s(Youtube:不良林)
       - 🇸🇬 新加坡-677.7KB/s(Youtube:不良林)
